services/message/deploy/ingress/message-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: message-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: message-service
                port:
                  number: 9000
